--- a/index.html
+++ b/index.html
@@ -1,11 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SilAlfie</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="estilos.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-trasparent w-100">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img src="./img/SilAlfie logo.jpg" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-5 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active fs-3" aria-current="page" href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3" href="#">Quien Soy</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3" href="#">Teatro</a>
+              </li>
+              <li class="nav-item fs-3">
+                <a class="nav-link" href="#">Astrologia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-3" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="contenedorsil">
+      <div class="itempresentacion">
+        <h1 data-aos="zoom-in" id="h1principal">Silvina Alfie</h1>
+        <p data-aos="zoom-in">
+          Docente de teatro • Directora escuela de teatro de Silvina Alfie •
+          Actriz • Directora •Astróloga • Coach
+        </p>
+      </div>
+      <div class="itempresentacionimg">
+        <img
+          src="./img/fotoprincipal.jpg"
+          data-aos="fade-zoom-in"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="100"
+          data-aos-offset="0"
+          alt=""
+        />
+      </div>
+    </div>
+    <main>
+      <section class="grupoteatro">
+        <div class="portadateatro">
+          <h2 id="escuelatext">Escuela de Teatro</h2>
+        </div>
+        <div class="portadateatroimg imagen1">
+          <img src="./imggrupos/portada grupo teatro.jpg" alt="" />
+        </div>
+        <h2 id="escuelatext">Grupos de la Escuela</h2>
+        <div class="contenedorgrid">
+          <div class="portadateatroimg imagen2">
+            <img src="./imggrupos/Grupo Coronas y Alemanes.jpg" alt="" />
+          </div>
+          <div class="portadateatroimg imagen3">
+            <img src="./imggrupos/Grupo d mente.jpg" alt="" />
+          </div>
+          <div class="portadateatroimg imagen4">
+            <img
+              src="./imggrupos/Grupo desquisiados y intermitentes.jpg"
+              alt=""
+            />
+          </div>
+          <div class="portadateatroimg imagen5">
+            <img src="./imggrupos/Grupo de marte y de venus.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <div class="container" data-aos="zoom-in">
+        <h2 id="h2principal">FOC - FESTIVAL DE OBRAS CORTAS 9a termporada</h2>
+        <img src="./imgfoc/torta foc.jpg" alt="" class="img1" />
+        <img src="./imgfoc/4 obras julio.jpg" alt="" class="img2" />
+        <img src="./imgfoc/4 obras agosto.jpg" alt="" class="img3" />
+        <img
+          src="./imgfoc/el consultorio de la doctora amanda.jpg"
+          alt=""
+          class="img4"
+        />
+        <img src="./imgfoc/galvanizados.jpg" alt="" class="img5" />
+        <img src="./imgfoc/geriatricos.jpg" alt="" class="img6" />
+        <img src="./imgfoc/las dos o ninguna.jpg" alt="" class="img7" />
+        <img src="./imgfoc/cuestion de hambre.jpg" alt="" class="img8" />
+        <img src="./imgfoc/enredo social.jpg" alt="" class="img9" />
+        <img src="./imgfoc/fiambre en fetas.jpg" alt="" class="img10" />
+        <img src="./imgfoc/orgasmos inesperados.jpg" alt="" class="img11" />
+      </div>
+    </main>
+    <script src="./index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
