puesta de servicios

--- a/index.html
+++ b/index.html
@@ -85,41 +85,66 @@
         <h2 id="escuelatext">Grupos de la Escuela</h2>
         <div class="contenedorgrid">
           <div class="portadateatroimg imagen2">
+            <h3>Grupo Coronas y Alemanes</h3>
             <img src="./imggrupos/Grupo Coronas y Alemanes.jpg" alt="" />
           </div>
           <div class="portadateatroimg imagen3">
+            <h3>Grupo d Mente</h3>
             <img src="./imggrupos/Grupo d mente.jpg" alt="" />
           </div>
           <div class="portadateatroimg imagen4">
+            <h3>Grupo Desquisiados y Intermitentes</h3>
             <img
               src="./imggrupos/Grupo desquisiados y intermitentes.jpg"
               alt=""
             />
           </div>
           <div class="portadateatroimg imagen5">
+            <h3>Grupo de Marte y de Venus</h3>
             <img src="./imggrupos/Grupo de marte y de venus.jpg" alt="" />
           </div>
         </div>
       </section>
 
-      <div class="container" data-aos="zoom-in">
-        <h2 id="h2principal">FOC - FESTIVAL DE OBRAS CORTAS 9a termporada</h2>
-        <img src="./imgfoc/torta foc.jpg" alt="" class="img1" />
-        <img src="./imgfoc/4 obras julio.jpg" alt="" class="img2" />
-        <img src="./imgfoc/4 obras agosto.jpg" alt="" class="img3" />
-        <img
-          src="./imgfoc/el consultorio de la doctora amanda.jpg"
-          alt=""
-          class="img4"
-        />
-        <img src="./imgfoc/galvanizados.jpg" alt="" class="img5" />
-        <img src="./imgfoc/geriatricos.jpg" alt="" class="img6" />
-        <img src="./imgfoc/las dos o ninguna.jpg" alt="" class="img7" />
-        <img src="./imgfoc/cuestion de hambre.jpg" alt="" class="img8" />
-        <img src="./imgfoc/enredo social.jpg" alt="" class="img9" />
-        <img src="./imgfoc/fiambre en fetas.jpg" alt="" class="img10" />
-        <img src="./imgfoc/orgasmos inesperados.jpg" alt="" class="img11" />
-      </div>
+      
+      <section class="servicios">
+        <div class="servicio">
+            <h2>FOC - FESTIVAL DE OBRAS CORTAS 9a termporada</h2>
+            <div class="container" data-aos="zoom-in">
+              <h2 id="h2principal">FOC - FESTIVAL DE OBRAS CORTAS 9a termporada</h2>
+              <img src="./imgfoc/torta foc.jpg" alt="" class="img1" />
+              <img src="./imgfoc/4 obras julio.jpg" alt="" class="img2" />
+              <img src="./imgfoc/4 obras agosto.jpg" alt="" class="img3" />
+              <img
+                src="./imgfoc/el consultorio de la doctora amanda.jpg"
+                alt=""
+                class="img4"
+              />
+              <img src="./imgfoc/galvanizados.jpg" alt="" class="img5" />
+              <img src="./imgfoc/geriatricos.jpg" alt="" class="img6" />
+              <img src="./imgfoc/las dos o ninguna.jpg" alt="" class="img7" />
+              <img src="./imgfoc/cuestion de hambre.jpg" alt="" class="img8" />
+              <img src="./imgfoc/enredo social.jpg" alt="" class="img9" />
+              <img src="./imgfoc/fiambre en fetas.jpg" alt="" class="img10" />
+              <img src="./imgfoc/orgasmos inesperados.jpg" alt="" class="img11" />
+            </div>
+        </div>
+
+        <div class="servicio">
+            <h2>Muestras</h2>
+            <p>Visita nuestras exhibiciones y disfruta de nuestras exclusivas muestras.</p>
+        </div>
+
+        <div class="servicio">
+            <h2>Empresas</h2>
+            <p>Apoyamos el desarrollo de negocios con soluciones a medida para empresas.</p>
+        </div>
+
+        <div class="servicio">
+            <h2>Viajes y Retiros</h2>
+            <p>Explora el mundo con nuestros viajes y retiros diseñados para relajarte.</p>
+        </div>
+    </section>
     </main>
     <script src="./index.js"></script>
     <script
